--- a/public/404.html
+++ b/public/404.html
@@ -58,10 +58,10 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>Página não existe!</h1>
+      <p>Tela do erro 404</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Tela do erro 404</p>
   </div>
 </body>
 </html>
